--- a/ML_Engineer_Roadmap_Notes.ipynb
+++ b/ML_Engineer_Roadmap_Notes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU/wCnFuhkzPXALtSnHYe0",
+      "authorship_tag": "ABX9TyMsuiwU3GNNVHvwk9XkANZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,112 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# ML Engineer Notes and Code Logic"
+      ],
       "metadata": {
-        "id": "1YvhJtkaWlPw"
+        "id": "0jC0x31zXfMA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## KNN (K-Nearest Neighbors)"
+      ],
+      "metadata": {
+        "id": "GbAjuJ6YXi6V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "import numpy as np\n",
+        "\n",
+        "#1 Data : [Height in cm , Weight in kg]\n",
+        "X_train = [[150, 45], [155, 50], [175, 80], [180, 90]]\n",
+        "y_train = [\"Small\", \"Small\", \"Large\", \"Large\"]\n",
+        "\n",
+        "#2 Model : Lazy Learning - it just stores the data\n",
+        "model = KNeighborsClassifier(n_neighbors = 3)\n",
+        "model.fit(X_train , y_train)\n",
+        "\n",
+        "#3 Predict :  New person: 160cm, 55kg.\n",
+        "# The model measures distance to all 4 points above and picks the closest 3.\n",
+        "\n",
+        "X_new = np.array([[160,55]])\n",
+        "preds = model.predict(X_new)\n",
+        "print(preds)\n",
+        "# Output: ['Small'] (Because it's closer to the 150/155 data points)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VYvCr8QwXoYu",
+        "outputId": "8ff9b9bb-8069-45b9-d8af-4464f0b3bead"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Small']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## LogisticRegression (Classification Model)"
+      ],
+      "metadata": {
+        "id": "dasceGSXY0yo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "# Data: [Hours Studied, Hours Slept]\n",
+        "X = [[2, 5], [3, 6], [8, 7], [10, 8]]\n",
+        "# Label: 0 = Fail, 1 = Pass\n",
+        "y = [0, 0, 1, 1]\n",
+        "\n",
+        "model = LogisticRegression()\n",
+        "model.fit(X,y)\n",
+        "\n",
+        "# Prediction\n",
+        "test_student = [[6,7]]\n",
+        "\n",
+        "#1 Hard Predict :- Answer in Yes or No/True or False\n",
+        "print(model.predict(test_student))\n",
+        "\n",
+        "#2 Soft Predict :- Answer in Probability\n",
+        "print(model.predict_proba(test_student))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hr1OnzHeY5ll",
+        "outputId": "50212ce5-55ae-4276-bf38-de955ec53c18"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n",
+            "[[0.39946336 0.60053664]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
