--- a/ML_Engineer_Roadmap_Notes.ipynb
+++ b/ML_Engineer_Roadmap_Notes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsuiwU3GNNVHvwk9XkANZO",
+      "authorship_tag": "ABX9TyNCoy6Xm+g/zE64Idwf/9R2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## KNN (K-Nearest Neighbors)"
+        "## Classification Models\n"
+      ],
+      "metadata": {
+        "id": "bF-r7Ptbd0VR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### KNN (K-Nearest Neighbors)"
       ],
       "metadata": {
         "id": "GbAjuJ6YXi6V"
@@ -87,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## LogisticRegression (Classification Model)"
+        "### LogisticRegression (Classification Model)"
       ],
       "metadata": {
         "id": "dasceGSXY0yo"
@@ -133,6 +142,211 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SVM (Support Vector Machines)"
+      ],
+      "metadata": {
+        "id": "Pne5XVHCaoMX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import svm\n",
+        "\n",
+        "# Data: [Height, Weight]\n",
+        "# 0 = Basketball Player, 1 = Sumo Wrestler\n",
+        "X = [[200, 100], [210, 110], [170, 150], [175, 160]]\n",
+        "y = [0, 0, 1, 1]\n",
+        "\n",
+        "# 1 Linear Kernel : For simple straight line\n",
+        "# model = svm.SVC(kernal = 'linear')\n",
+        "\n",
+        "# 2 RBF Kernel : Radial Basis Function - The \"Lifting\" Trick)\n",
+        "# Used when data is curvy or complex\n",
+        "model = svm.SVC(kernel = 'rbf')\n",
+        "\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "# Predict\n",
+        "print(model.predict([[180, 155]]))\n",
+        "# Output: [1] (Likely a Sumo Wrestler)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AuTFUMmhar5V",
+        "outputId": "eb8a3d17-e958-48d9-e700-e792293a3077"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Decision Tree & Random Forest"
+      ],
+      "metadata": {
+        "id": "ftuOB8vUeo5B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Data: [Wings?, Barks?, Fur?]\n",
+        "# 1=Yes, 0=No\n",
+        "X = [[0, 1, 1], [1, 0, 0], [0, 0, 1], [0, 1, 1]]\n",
+        "y = [\"Dog\", \"Bird\", \"Cat\", \"Dog\"]\n",
+        "\n",
+        "# --- OPTION 1: Single Decision Tree ---\n",
+        "# Good for explaining \"Why\", but can over-memorize (Overfit)\n",
+        "tree_model = DecisionTreeClassifier()\n",
+        "tree_model.fit(X, y)\n",
+        "\n",
+        "# --- OPTION 2: Random Forest ---\n",
+        "# Builds 100 trees (n_estimators=100). Harder to explain, but much more accurate.\n",
+        "forest_model = RandomForestClassifier(n_estimators=100)\n",
+        "forest_model.fit(X, y)\n",
+        "\n",
+        "# Predict: No wings, No bark, Has fur\n",
+        "print(\"Forest Model\\n\")\n",
+        "print(forest_model.predict([[0, 0, 1]]))\n",
+        "print(\"Tree Model\\n\")\n",
+        "print(tree_model.predict([[0, 0, 1]]))\n",
+        "# Output: ['Cat']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hfV4FfZIexxo",
+        "outputId": "492f460a-a547-4a4b-ebb3-21f4ff2d888b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Forest Model\n",
+            "\n",
+            "['Cat']\n",
+            "Tree Model\n",
+            "\n",
+            "['Cat']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Gradient Boosting Machine\n"
+      ],
+      "metadata": {
+        "id": "bXo3vkVAjTY5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install xgboost"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2KIiqPWXjbeu",
+        "outputId": "727884ac-72fa-431d-9687-f7304953dd28"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: xgboost in /usr/local/lib/python3.12/dist-packages (3.1.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from xgboost) (2.0.2)\n",
+            "Requirement already satisfied: nvidia-nccl-cu12 in /usr/local/lib/python3.12/dist-packages (from xgboost) (2.29.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (from xgboost) (1.16.3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# XGBoost is not in sklearn standard library, you usually install it separately\n",
+        "\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Data: [Credit Score, Debt, Income]\n",
+        "X = [[600, 5000, 30], [800, 0, 100], [550, 10000, 25], [750, 2000, 80]]\n",
+        "# Label: 1 = Default (Bad), 0 = Pay (Good)\n",
+        "y = [1, 0, 1, 0]\n",
+        "\n",
+        "# Split data (Crucial for boosting to prevent overfitting)\n",
+        "X_train , X_test , y_train , y_test = train_test_split(\n",
+        "    X,\n",
+        "    y,\n",
+        "    test_size = 0.2\n",
+        ")\n",
+        "\n",
+        "# 1. Initialize XGBoost\n",
+        "# n_estimators=100 (100 shots/trees)\n",
+        "# learning_rate=0.1 (Don't correct too fast, take small steps)\n",
+        "model = XGBClassifier(n_estimators = 100 , learning_rate = 0.1)\n",
+        "\n",
+        "# 2. Train\n",
+        "model.fit(X_train,y_train)\n",
+        "\n",
+        "# 3. Predict\n",
+        "print(model.predict([[620, 4000, 35]]))\n",
+        "# Output: [1] (Likely to default)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gm_x4cwDlNfK",
+        "outputId": "b538983a-05e2-4087-a7ef-1408a3c6edbc"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Regression Models"
+      ],
+      "metadata": {
+        "id": "Z4tFa_qRnTqa"
+      }
     }
   ]
 }
